--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-size: 16px;
   line-height: 1;
 }
@@ -63,6 +63,7 @@ textarea {
   border-bottom-right-radius: 15px;
   background-color: #06aed5;
   color: white;
+  height: fit-content;
 }
 
 .saveBtn i:hover {
