--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -28,10 +28,11 @@ textarea {
 .time-block {
   text-align: center;
   border-radius: 15px;
+  width: fit-content;
 }
 
 .row {
-  white-space: pre-wrap;
+  /* white-space: pre-wrap; */
   height: 80px;
   border-top: 1px solid white;
 }
